--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "feather-icons": "^4.29.2",
     "next": "16.0.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -24,5 +24,6 @@
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
     "typescript": "^5"
-  }
+  },
+  "proxy": "http://localhost:3500"
 }
